auth frontend - react
